randomized data gen working/tested

--- a/graph_of_udts/Makefile
+++ b/graph_of_udts/Makefile
@@ -6,5 +6,13 @@ OBJ = $(SRC:.c=.o)
 %.o : %.c
 	$(CC) -c $< $(CFLAGS) $(CPPFLAGS) -I. -I$(HDF5_HOME)/include
 
+all: udt_graph1 udt_graph2
+
 udt_graph1 : udt_graph1.o $(OBJ)
 	$(CC) -o $@ $< $(OBJ) -L$(HDF5_HOME)/lib -lhdf5 $(LDFLAGS) $(LIBS)
+
+udt_graph2 : udt_graph2.o $(OBJ)
+	$(CC) -o $@ $< $(OBJ) -L$(HDF5_HOME)/lib -lhdf5 $(LDFLAGS) $(LIBS)
+
+clean:
+	rm -rf $(OBJ) udt_graph1 udt_graph2
